--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Randomizer
-version: '1.0-SNAPSHOT'
+version: '1.0'
 main: de.jafe2211.randomizer.Randomizer
 api-version: '1.21'
 authors: [ Jafe2211 ]
